Corrigindo função de inserir e listar filmes
